{
    "name": "Menu_Inputs",
    "maps": [
        {
            "name": "MainMenu",
            "id": "dde74aac-a8b0-4e84-bec4-52773335685d",
            "actions": [
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "058239a6-b0af-4374-93c2-6fce8d281c7e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6fee2206-1936-4654-b50a-94edf078f899",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InGame",
            "id": "2e5f941c-f790-40da-bf48-6efaf2602ea4",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "c6c255a6-15ac-4b0e-b99a-9f260d3faccb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "14ba45da-fe7d-46d2-8bf7-d7f1b4fa5b0a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}